--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0",
+    "recharts": "^2.12.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
